# onetcli

./: .gitattributes  .gitignore  Cargo.toml  README.md  README_CN.md  SPONSOR.md
crates/core/src/: lib.rs  tab_container.rs
crates/db/: Cargo.toml  README.md
crates/db/locales/: db.yml
crates/db/src/: connection.rs  executor.rs  lib.rs  manager.rs  manifest_helpers.rs  plugin.rs  plugin_manifest.rs  sql_format.rs  ssh_tunnel.rs  streaming_parser.rs
crates/db/tests/: ipc_mock_driver.rs  plugin_manifest.rs
crates/db_view/: Cargo.toml
crates/db_view/locales/: db_view.yml
crates/db_view/src/: connection_form_window.rs  database_objects_tab.rs  database_tab.rs  (+10 more)
crates/er_flow/: Cargo.toml
crates/remote_file_editor/: Cargo.toml
crates/remote_file_editor/locales/: remote_file_editor.yml
crates/remote_file_editor/src/: close_guard.rs  editor_window.rs  file_policy.rs  language.rs  lib.rs
crates/sftp_view/: Cargo.toml
crates/terminal/: Cargo.toml
crates/terminal_view/: Cargo.toml
crates/terminal_view/locales/: terminal_view.yml
crates/terminal_view/src/: addon.rs  cd_completion.rs  highlight_presets.rs  history_prompt.rs  lib.rs  settings.rs  ssh_form_mfa.rs  ssh_form_window.rs  theme.rs  view.rs
crates/terminal_view/src/sidebar/: file_manager_panel.rs  mod.rs  server_monitor_panel.rs  settings_panel.rs
docs/: changelog.md  index.vue
main/: Cargo.toml  build.rs
main/locales/: main.yml
main/src/: app_init.rs  auth.rs  home_tab.rs  main.rs  onetcli_app.rs  setting_tab.rs
resources/macos/: OnetCli.icns
script/: generate-macos-icon.sh
(+132 files in other folders)
