[package]
name = "terminal_view"
version = "0.1.0"
edition = "2021"

[dependencies]
# Terminal core
terminal = { workspace = true }
ssh = { workspace = true }
sftp = { workspace = true }
remote_file_editor = { workspace = true, features = ["ui"] }

# GPUI
gpui = { workspace = true }
gpui-component = { workspace = true }
one-core = { workspace = true }
one-ui = { workspace = true }
# Terminal emulation
alacritty_terminal.workspace = true

# Async
async-trait = { workspace = true }
regex = { workspace = true }
# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
rust-i18n = { workspace = true }
url.workspace = true
chrono = { workspace = true }
tokio = { workspace = true }
serialport = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
